<resources>
    <string name="app_name">Calc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Luis David</string>
    <string name="nav_header_subtitle">luisportilla009@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Calculator</string>
    <string name="menu_gallery">Save Numbers</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Record</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">About</string>

    <string name="btn_0" translatable="false">0</string>
    <string name="btn_1" translatable="false">1</string>
    <string name="btn_2" translatable="false">2</string>
    <string name="btn_3" translatable="false">3</string>
    <string name="btn_4" translatable="false">4</string>
    <string name="btn_5" translatable="false">5</string>
    <string name="btn_6" translatable="false">6</string>
    <string name="btn_7" translatable="false">7</string>
    <string name="btn_8" translatable="false">8</string>
    <string name="btn_9" translatable="false">9</string>
    <string name="btn_div" translatable="false">/</string>
    <string name="btn_min" translatable="false">-</string>
    <string name="btn_point" translatable="false">.</string>
    <string name="btn_equal" translatable="false">=</string>
    <string name="btn_clear" translatable="false">C</string>
    <string name="btn_clear_all" translatable="false">CE</string>
    <string name="btn_about">Acerca\nde</string>
    <string name="text_Name">Creado por: Luis David Portilla Barco</string>
    <string name="text_version">Version 1.3.1</string>
    <string name="btn_back">Regresar</string>
    <string name="btn_mul" translatable="false">*</string>
    <string name="btn_plus" translatable="false">+</string>
    <string name="btn_var" translatable="false">x</string>
    <string name="btn_reverse" translatable="false">1/x</string>
    <string name="btn_par0" translatable="false">(</string>
    <string name="btn_par1" translatable="false">)</string>
    <string name="btn_sen">sen</string>
    <string name="btn_cos" translatable="false">cos</string>
    <string name="btn_tan" translatable="false">tan</string>
    <string name="btn_pot" translatable="false">^</string>
    <string name="dtn_sqrt" translatable="false">sqrt</string>
    <string name="others">Others</string>
    <string name="btn_aggregate">Save</string>
    <string name="btn_tools">Save</string>
    <string name="circle_sexagesimal">Sexagesimal</string>
    <string name="circle_radial">Radial</string>
    <string name="circle_gradian">Gradian</string>
    <string name="btn_search">Search</string>
    <string name="hint_valor">Valor</string>
    <string name="hint_name">Number\'s Name</string>
    <string name="record">Record</string>
    <string name="btn_remove">Clean</string>
</resources>
